# conda-oci

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
conda_oci/: _version.py  conversion.py  validation.py
conda_oci/tests/: test_conversion_dists.py  test_validation_dists.py
